add new route: get all expression
